--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ header {
   color: white;
 }
 
-#desktop-nav,
 #desktop-nav ul {
   display: none;
 }
@@ -419,15 +418,24 @@ textarea {
 
 /* pop up */
 
-.menu-content {
-  width: 100%;
-  height: 100%;
+.menu-container {
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  height: 100%;
+  width: 100%;
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+}
+
+.menu-content {
+  width: 100%;
+  height: 90%;
+  flex-direction: column;
   background: #3c3a39;
 }
 
@@ -452,6 +460,15 @@ textarea {
   line-height: 4rem;
   font-weight: 600;
   color: #fff;
+}
+
+.bottom-line {
+  width: 100%;
+  height: 0.3125rem;
+  margin-bottom: 0.3125rem;
+  background-image: url("../media/svg/bottom-line.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 @media all and (min-width: 720px) {
